hub-cluster/traefik/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hub-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: traefik
  listeners:
    - name: traefik-dashboard-https
      hostname: traefik-hub.mershab.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: traefik-hub-dashboard-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: dex-https
      hostname: dex.mershab.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: dex-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: sveltos-https
      hostname: sveltos.mershab.com
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: sveltos-dashboard-tls
      allowedRoutes:
        namespaces:
          from: All
