hub-cluster/traefik/dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  parentRefs:
    - name: hub-gateway
  hostnames:
    - traefik-hub.mershab.com
  rules:
    - backendRefs:
        - name: traefik
          port: 9000
