hub-cluster/traefik/dex-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex
  namespace: dex
spec:
  parentRefs:
    - name: hub-gateway
      namespace: kube-system
  hostnames:
    - dex.mershab.com
  rules:
    - backendRefs:
        - name: dex
          port: 5556
